MOL-245: Add PayPal Express

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -4,3 +4,4 @@
 @import "./account/payment-selection";
 @import "./account/subscriptions";
 @import "./component/credit-card-mandate";
+@import "./component/paypal-express-button";
