--- a/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
+++ b/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
@@ -4,6 +4,7 @@
 {% block component_offcanvas_cart_actions_checkout %}
     {{ parent() }}
     {% if page.cart.lineItems|length > 0 %}
+
         {% if mollie_applepaydirect_enabled and ('offcanvas' not in mollie_applepaydirect_restrictions) %}
             {% block component_offcanvas_cart_actions_checkout_apple_direct_component %}
                 <div class="mt-2 js-apple-pay-container mollie-apple-pay-direct-offcanvas">
@@ -11,6 +12,15 @@
                 </div>
             {% endblock %}
         {% endif %}
+
+        {% if mollie_paypalexpress_enabled and ('offcanvas' not in mollie_paypalexpress_restrictions) %}
+            {% block component_offcanvas_cart_actions_checkout_mollie_paypal_express_component %}
+                <div class="mt-2 justify-content-end">
+                    {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
+                </div>
+            {% endblock %}
+        {% endif %}
+
     {% endif %}
 {% endblock %}
 
