--- a/src/Resources/views/storefront/page/checkout/cart/index.html.twig
+++ b/src/Resources/views/storefront/page/checkout/cart/index.html.twig
@@ -31,9 +31,11 @@
 
     {% if mollie_paypalexpress_enabled and ('cart' not in mollie_paypalexpress_restrictions) %}
         {% block page_checkout_aside_actions_mollie_paypal_express_component %}
-            <div class="mt-2">
-                {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
-            </div>
+            <form action="{{ path('frontend.mollie.paypal-express.start', {   }) }}" method="GET">
+                <div class="mt-2">
+                    {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
+                </div>
+            </form>
         {% endblock %}
     {% endif %}
 {% endblock %}
