MOL-245: add cypress ui tests

--- a/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
+++ b/src/Resources/views/storefront/component/checkout/offcanvas-cart.html.twig
@@ -15,7 +15,7 @@
 
         {% if mollie_paypalexpress_enabled and ('offcanvas' not in mollie_paypalexpress_restrictions) %}
             {% block component_offcanvas_cart_actions_checkout_mollie_paypal_express_component %}
-                <form action="{{ path('frontend.mollie.paypal-express.start', {   }) }}" method="GET" >
+                <form id="molliePayPalExpressOffcanvasForm" action="{{ path('frontend.mollie.paypal-express.start', {   }) }}" method="GET" >
                     <div class="mt-2 justify-content-end">
                         {% include '@MolliePayments/mollie/component/paypal-express-button.twig' %}
                     </div>
