--- a/src/Resources/views/storefront/component/product/card/action.html.twig
+++ b/src/Resources/views/storefront/component/product/card/action.html.twig
@@ -30,7 +30,7 @@
     {% block component_product_box_action_buy_paypal_express %}
         {% if mollie_paypalexpress_enabled and ('plp' not in mollie_paypalexpress_restrictions) %}
             {% block component_offcanvas_cart_actions_checkout_mollie_paypal_express_component %}
-                <form action="{{ path('frontend.mollie.paypal-express.start') }}"
+                <form class="molliePayPalExpressProductListingForm" action="{{ path('frontend.mollie.paypal-express.start') }}"
                       data-form-csrf-handler="true"
                       method="POST">
                     <input type="hidden" name="productId" value="{{ product.id }}">
