--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-list/mollie-subscriptions-list.html.twig
@@ -62,7 +62,7 @@
 
                     {% block mollie_payments_subscription_list_content_amount %}
                         <template #column-amount="{ item }">
-                            {{ item.amount | currency(item.currency) }}
+                            {{ currencyFilter( item.amount , item.currency.isoCode, item.totalRounding.decimals) }}
                         </template>
                     {% endblock %}
 
