--- a/src/Resources/app/administration/src/module/mollie-payments/rules/mollie-lineitem-subscription-rule/mollie-lineitem-subscription-rule.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/rules/mollie-lineitem-subscription-rule/mollie-lineitem-subscription-rule.html.twig
@@ -3,6 +3,7 @@
                       id="mollie-lineitem-subscription-rule"
                       size="medium"
                       :options="selectValues"
+                      v-model:value="isSubscription"
                       v-model="isSubscription"
                       class="field--main">
     </sw-single-select>
