--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
@@ -71,7 +71,7 @@
 
                         <sw-container columns="1fr" gap="0px 30px">
                             {% block sw_order_detail_card_basic_field_description %}
-                                <sw-text-field v-model="subscription.description"
+                                <sw-text-field v-model:value="subscription.description" v-model="subscription.description"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelDescription')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -80,7 +80,7 @@
 
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_basic_field_amount %}
-                                <sw-text-field v-model="subscription.amount"
+                                <sw-text-field v-model:value="subscription.amount" v-model="subscription.amount"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelAmount')"
                                                disabled="disabled">
                                     <template slot="suffix">
@@ -89,7 +89,7 @@
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_basic_field_quantity %}
-                                <sw-text-field v-model="subscription.quantity"
+                                <sw-text-field v-model:value="subscription.quantity" v-model="subscription.quantity"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelQuantity')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -97,13 +97,13 @@
                         </sw-container>
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_basic_field_customer_name %}
-                                <sw-text-field v-model="customerFullName"
+                                <sw-text-field v-model:value="customerFullName" v-model="customerFullName"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelShopwareCustomer')"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_basic_field_mollie_customer_id %}
-                                <sw-text-field v-model="subscription.mollieCustomerId"
+                                <sw-text-field v-model:value="subscription.mollieCustomerId" v-model="subscription.mollieCustomerId"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelMollieCustomer')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -111,7 +111,7 @@
                         </sw-container>
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_basic_field_created_at %}
-                                <sw-text-field v-model="formattedCreateAt"
+                                <sw-text-field v-model:value="formattedCreateAt" v-model="formattedCreateAt"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelCreatedAt')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -135,13 +135,13 @@
                     <sw-card :title="$tc('mollie-payments.subscriptions.detail.cardTitleStatus')" :hero="false" :isLoading="false" :large="false">
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_status_field_status %}
-                                <sw-text-field v-model="translatedStatus"
+                                <sw-text-field v-model:value="translatedStatus" v-model="translatedStatus"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelStatus')"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_status_field_canceled_at %}
-                                <sw-text-field v-model="formattedCanceledAt"
+                                <sw-text-field v-model:value="formattedCanceledAt" v-model="formattedCanceledAt"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelCanceledAt')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -149,13 +149,13 @@
                         </sw-container>
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_status_field_mollie_id %}
-                                <sw-text-field v-model="subscription.mollieId"
+                                <sw-text-field v-model:value="subscription.mollieId"  v-model="subscription.mollieId"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelMollieSubscription')"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_status_field_mandate_id %}
-                                <sw-text-field v-model="subscription.mandateId"
+                                <sw-text-field v-model:value="subscription.mandateId"  v-model="subscription.mandateId"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelMandateId')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -163,14 +163,14 @@
                         </sw-container>
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_status_field_next_payment_at %}
-                                <sw-text-field v-model="formattedNextPaymentAt"
+                                <sw-text-field v-model:value="formattedNextPaymentAt" v-model="formattedNextPaymentAt"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelNextPaymentAt')"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_status_field_reminded_at %}
                                 <sw-text-field
-                                        v-model="formattedLastRemindedAt"
+                                        v-mode:value="formattedLastRemindedAt"
                                         :label="$tc('mollie-payments.subscriptions.detail.labelLastRemindedAt')"
                                         disabled="disabled">
                                 </sw-text-field>
