--- a/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
+++ b/src/Resources/app/storefront/src/scss/checkout/payment-selection.scss
@@ -9,6 +9,10 @@
         margin-top: 15px;
     }
 
+    .mollie-bancomat-pay{
+        margin-top:15px;
+    }
+
     .mollie-pos-terminals {
         margin-top: 15px;
     }
@@ -25,6 +29,10 @@
         .custom-select:invalid {
             border: 1px solid red;
         }
+    }
+
+    .mollie-bancomat-pay{
+        margin-top:15px;
     }
 
     .mollie-pos-terminals {
