--- a/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/page/mollie-subscriptions-detail/mollie-subscriptions-detail.html.twig
@@ -103,7 +103,7 @@
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_basic_field_mollie_customer_id %}
-                                <sw-text-field v-model:value="subscription.mollieCustomerId" v-model="subscription.mollieCustomerId"
+                                <sw-text-field class="cy-subscription-customer-id" v-model:value="subscription.mollieCustomerId" v-model="subscription.mollieCustomerId"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelMollieCustomer')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -112,6 +112,7 @@
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_basic_field_created_at %}
                                 <sw-text-field v-model:value="formattedCreateAt" v-model="formattedCreateAt"
+                                               class="cy-subscription-formatted-created-at"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelCreatedAt')"
                                                disabled="disabled">
                                 </sw-text-field>
@@ -137,12 +138,14 @@
                             {% block sw_order_detail_card_status_field_status %}
                                 <sw-text-field v-model:value="translatedStatus" v-model="translatedStatus"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelStatus')"
+                                               class="cy-subscription-translated-status"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_status_field_canceled_at %}
                                 <sw-text-field v-model:value="formattedCanceledAt" v-model="formattedCanceledAt"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelCanceledAt')"
+                                               class="cy-subscription-formatted-canceled-at"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
@@ -151,12 +154,14 @@
                             {% block sw_order_detail_card_status_field_mollie_id %}
                                 <sw-text-field v-model:value="subscription.mollieId"  v-model="subscription.mollieId"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelMollieSubscription')"
+                                               class="cy-subscription-mollie-id"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_status_field_mandate_id %}
                                 <sw-text-field v-model:value="subscription.mandateId"  v-model="subscription.mandateId"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelMandateId')"
+                                               class="cy-subscription-mandate-id"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
@@ -164,14 +169,16 @@
                         <sw-container columns="1fr 1fr" gap="0px 30px">
                             {% block sw_order_detail_card_status_field_next_payment_at %}
                                 <sw-text-field v-model:value="formattedNextPaymentAt" v-model="formattedNextPaymentAt"
+                                               class="cy-subscription-formatted-next-payment-at"
                                                :label="$tc('mollie-payments.subscriptions.detail.labelNextPaymentAt')"
                                                disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
                             {% block sw_order_detail_card_status_field_reminded_at %}
                                 <sw-text-field
-                                        v-mode:value="formattedLastRemindedAt"
+                                        v-model:value="formattedLastRemindedAt" v-model="formattedLastRemindedAt"
                                         :label="$tc('mollie-payments.subscriptions.detail.labelLastRemindedAt')"
+                                        class="cy-subscription-formatted-last-reminded-at"
                                         disabled="disabled">
                                 </sw-text-field>
                             {% endblock %}
@@ -216,7 +223,7 @@
                                      :allowInlineEdit="false">
                                 <template #columns="{ item }">
                                     <sw-grid-column flex="minmax(100px, 1fr)" :label="$tc('mollie-payments.subscriptions.detail.history.colDate')">
-                                        {{ item.createdAt | date({hour: '2-digit',minute: '2-digit',day: '2-digit',month: '2-digit',year: 'numeric'}) }}
+                                        {{ dateFilter(item.createdAt, { hour: '2-digit', minute: '2-digit', day: '2-digit',month: '2-digit',year: 'numeric' }) }}
                                     </sw-grid-column>
 
                                     {% block sw_order_detail_card_history_grid_columns %}
