MOL-1299: Refund Tax at Net Orders

--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-refund-manager/mollie-refund-manager.scss
@@ -95,7 +95,8 @@
             }
         }
 
-        .check-deduct-promotion {
+        .check-deduct-promotion,
+        .check-refund-tax {
             label {
                 font-size: 12px;
             }
